# opencldemo

./: README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/CL/: cl.h  cl_ext.h  cl_ext_qcom.h  opencl.hpp
app/src/main/cpp/main/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/openclstatic/: CMakeLists.txt  libopencl.cpp
app/src/main/java/com/example/opencl/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
